# n8n-mcp

./: .env.template  .gitignore  IMPROVEMENTS.md  Makefile  README.md  pyproject.toml  requirements.txt
.github/: copilot-instructions.md
builder/: config.py  models.py
client/: n8n_client.py
core/: builder.py  cache.py  circuit_breaker.py  config.py  logging.py  metrics.py  rate_limiter.py  specs.py  validator.py  workflow_helpers.py
examples/: workflow_builder_example.py
infra/: Dockerfile  docker-compose.yml  start.sh
mcp_server/: __main__.py  app.py  server.py  utils.py
n8n_client/: client.py
scripts/: bootstrap.sh
templates/: advanced-branching-example.json  cron-http-if-slack.json  cron-http-notion.json  index.json  webhook-code-http.json  webhook-http-postgres.json
tests/: conftest.py  test_builder.py  test_cache.py  test_circuit_breaker.py  test_fastapi_dependency.py  test_logging_security.py  test_mcp_server_tools.py  test_rate_limiter.py  test_utils.py  test_validator.py  test_workflow_helpers.py
ui/: app.py
ui_gradio/: app.py
